# valagtk4-blueprint

./: README.md  meson.build  org.gnome.Example.json  setup-template.sh
.flatpak-builder/cache/refs/heads/x86_64-org.gnome.Example.json/: build-blueprint-compiler  init
.flatpak-builder/checksums/: x86_64-org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  window.vala
src/ui/: window.blp
